# AC7916A-STA350BWTR-AMP

./: Makefile  default.workspace
.claude/plans/: amp-cleanup-binary-eq.md
APW_生成/: APW_setting_1.c  APW_setting_10.c  APW_setting_11.c  APW_setting_2.c  APW_setting_3.c  APW_setting_4.c  APW_setting_5.c  APW_setting_7_A.c  APW_setting_7_B.c  APW_setting_8_A.c  APW_setting_8_B.c  APW_setting_9.c
Android/: local.properties  settings.gradle.kts
Android/app/: build.gradle.kts  local.properties  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Sta350EqTool/: Cargo.toml
Sta350EqTool/src/: main.rs
apps/common/audio_music/: eq_config.c  usb_audio_api.c
apps/common/ble/: le_trans_data.c
apps/common/ble/include/: le_trans_data.h
apps/common/config/: ci_transport_uart.c  new_cfg_tool.c  user_cfg.c
apps/common/config/include/: bt_profile_cfg.h
apps/common/debug/: debug_user.c
apps/common/ui/lcd_driver/: lcd_data_driver.c  lcd_drive.c  lcd_ili9481.c
apps/common/ui/touch_panel/: ft6236.c  gt911.c
apps/common/usb/device/: task_pc.c
apps/wifi_story_machine/: app_main.c  app_music.c  eq_usb_hid.c  eq_usb_hid.h  user_app.c
apps/wifi_story_machine/board/wl82/: AC791N_WIFI_STORY_MACHINE.cbp  (+8 more)
apps/wifi_story_machine/bt_ble/: bt_emitter.c  bt_music.c
apps/wifi_story_machine/include/: app_config.h  eq_protocol.h  user_app.h  user_status.h
apps/wifi_story_machine/sta350bw/: BiquadPresets.c  BiquadPresets.h  sta350bw.c  sta350bw.h
cpu/wl82/tools/: download.c  isd_config_rule.c  sdk.map
doc/: sta350bw.md
include_lib/system/generic/: log.h
(+19 files in other folders)
