[package]
name = "sta350_eq_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
hidapi = "2.6"
# 补齐 eframe 在 Windows 下需要的 winapi feature(否则 app_icon.rs 编译失败)
winapi = { version = "0.3.9", features = ["windef", "winuser"] }

[profile.release]
opt-level = 3
lto = true
strip = true
